# Proiect-NXP-CUP-2025-

./:  debix-systemd-setup.txt  CMakeLists.txt  LICENSE  README.md  interpolated_points.txt  interpolated_points_FAR.txt  interpolated_points_NEAR.txt  menu_rotary.py  menu_rotary_libgpiod.py  running.dts  sh1106_test.py  witch main
Teensy-Code/: README.md  WirelessComunication.drawio  Wiring.fzz  platformio.ini  servoSpeedCorelation.txt
Teensy-Code/3D Print/: spareparts2.3mf
Teensy-Code/3D Print/CarModel/: CarBodyFrontEnd.stl  CarModel.stl  CassisPlateBackend.3mf  CassisPlateBackend.stl  RearMotorRodPilloBlock.stl  RearMotorRodPilloBlock_RpmSensorSupport.3mf  RpmSensorSupport.stl  carBodyBackEnd.stl
Teensy-Code/3D Print/MenuButtons/: Left.stl  Minus.stl  Plus.stl  Right.stl  menuButtons v4.f3d
Teensy-Code/3D Print/NXPCupTimer/: CapacTimer.stl  CutieTimer.stl  NXP_CUP_TIMER v4.f3d
Teensy-Code/3D Print/SteeringRodServoAttachment/: SteeringRodServoAttachment.3mf  SteeringRodServoAttachment.f3d  SteeringRodServoAttachment.stl
Teensy-Code/3D Print/WheelArm12by4mm/: WheelArm12by4mm v7.f3d  WheelArm12by4mm.stl
Teensy-Code/CarParameters/: Car1GoldAGRESIV  Car1GoldSAFE  Car2White
Teensy-Code/PCB-Kicad/Modul_Lcd_Butoane/: Modul_Lcd_Butoane.kicad_pcb  Modul_Lcd_Butoane.kicad_prl  Modul_Lcd_Butoane.kicad_pro  Modul_Lcd_Butoane.kicad_sch  fp-info-cache  report.txt  ~Modul_Lcd_Butoane.kicad_sch.lck
Teensy-Code/PCB-Kicad/Modul_Main_Board/: Modul_Main_Board.kicad_pcb  Modul_Main_Board.kicad_prl  (+4 more)
Teensy-Code/Pixy configs/: pixyParameters_v1.0.prm  pixyParameters_v1.1.prm  pixyParameters_v1.2.prm
Teensy-Code/include/: Config.h  MovingAverage.h  PurePursuitGeometry.h  RotaryEncoder.h  SteeringWheel.h  VectorsProcessing.h  aproximatePixyVector.h  geometry2D.h  rgb2hsv.h
Teensy-Code/matlab/: main_serial.m  main_sockets.m  newClientCallBack.m  plotLineABC.m  read_callback_serialport.m  sendData.m  test.m
Teensy-Code/src/: main.cpp  test_main.cpp
Teensy-Code/test/: test_EDF.cpp  test_ESC.cpp  test_ESC_calibrate.cpp  test_LCD.cpp  test_LidarLite.cpp  test_RPM.cpp  test_RPM_calibrate.cpp  test_RotaryEncoder.cpp  test_SteeringWheel.cpp  test_TFMINIPLUS.cpp  test_Ultrasonic.cpp  test_configureBLHeli32.cpp  test_speedInversion.cpp
Teensy-Code/video/: valoriFinaleNxpRegionale.txt
VisionDebixTCP/: PidCalib.py  SpeedCalib.py  TCPclient.py  TCPclientVideoCapture.py  cam1.avi  main.py  mainVideo.py  plot_skeleton.py  savedData.txt  test1.py  visualizeAckermann.py  webControl.py
VisionDebixTCP/templates/: index.html
docs/: summary.md
include/: SharedConfigJson.hpp  TcpConnection.hpp  config.h  mathFunctions.h  math_functions.h  tcp_connect.h
include/CameraFunctions/: CameraProcessing.cpp  CameraProcessing.hpp  DEPRECATED_camera_setup.h  DEPRECATED_color_segmentation.h  cameraSetup.h  camera_setup.h  find_camera_index.sh  line_detection.h  segmentation.h  shell_commands.txt  thinning.h
include/GpioFunctions/: gpio_ctrl.h  pwm_ctrl.h
include/MathFunctions/: MathFunctions.cpp  MathFunctions.hpp
include/OledLcdFunctions/: LinuxI2C.hpp  OledDisplay.hpp
include/PurePursuit/: PurePursuit.hpp  purePursuit.h  pure_pursuit.h
include/PurePursuitFunctions/: PurePursuit.cpp  PurePursuit.hpp
include/SerialPortFunctions/: SerialPort.cpp  SerialPort.hpp  WriteAllWithTimeout.hpp
include/TcpFunctions/: TcpConnection.cpp  TcpConnection.hpp
src/: main.cpp
test/: gpiotest.cpp  main.cpp  pixy2test.cpp
(+127 files in other folders)
